--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,11 @@
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "firebase": "^11.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.5",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.1.14",
