--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,21 +14,25 @@
   "description": "",
   "dependencies": {
     "@sendgrid/mail": "^8.1.4",
-    "axios": "^1.7.9",
+    "axios": "^1.8.3",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "canvas": "^3.1.0",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "firebase": "^11.3.0",
     "firebase-admin": "^13.1.0",
+    "form-data": "^4.0.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.10.1",
+    "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.16",
+    "socket.io": "^4.8.1",
     "speakeasy": "^2.0.0",
+    "streamifier": "^0.1.1",
     "twilio": "^5.4.0"
   },
   "devDependencies": {
