--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-icons": "^5.4.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.14",
     "web-vitals": "^4.2.4"
   },
